--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -64,6 +64,7 @@ tomcat_ssl_protocol: org.apache.coyote.http11.Http11NioProtocol
 tomcat_ssl_max_threads: 150
 tomcat_ssl_fqdn: "{{ ansible_fqdn }}"
 tomcat_ssl_org_name: "{{ ansible_domain }}"
+tomcat_ssl_private_key_owner: root
 
 tomcat_censor_ansible_output: yes
 tomcat_manage_server_xml: yes
