Updated test harness

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -13,22 +13,22 @@
     tomcat_log_retain_days: 1
     tomcat_censor_ansible_output: no
 
-  pre_tasks:
-    - name: Install required packages
-      yum:
-        name:
-          - java-1.8.0-openjdk
-          - pyOpenSSL        # RHEL 7
+  # pre_tasks:
+  #   - name: Install required packages
+  #     yum:
+  #       name:
+  #         - java-1.8.0-openjdk
+  #         # - pyOpenSSL        # RHEL 7
 
-          # RHEL 8
-          # - python3-pyOpenSSL
-          # - python36
+  #         # RHEL 8
+  #         # - python3-pyOpenSSL
+  #         # - python36
 
-    # RHEL 8
-    # - name: Install pip packages
-    #   pip:
-    #     name:
-    #       - lxml
+  #   # RHEL 8
+  #   # - name: Install pip packages
+  #   #   pip:
+  #   #     name:
+  #   #       - lxml
 
   roles:
     - name: about
