--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -2,9 +2,9 @@
 - name: Prepare
   hosts: all
 
-  tasks:
-    - name: Install java
-      dnf:
-        name:
-          - java-11-openjdk-devel
-          - python3-lxml
+  tasks: []
+    # - name: Install java
+    #   dnf:
+    #     name:
+    #       - java-11-openjdk-devel
+    #       - python3-lxml
